; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckLab2LabLUT.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckLab2LabLUT.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cmsAT_END = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @CheckLab2LabLUT to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CheckLab2LabLUT() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = call i32 (...) @DbgThread()
  %4 = call i32* @cmsPipelineAlloc(i32 %3, i32 3, i32 3)
  store i32* %4, i32** %1, align 8
  %5 = call i32 (...) @DbgThread()
  %6 = load i32*, i32** %1, align 8
  %7 = load i32, i32* @cmsAT_END, align 4
  %8 = call i32 (...) @DbgThread()
  %9 = call i32 @_cmsStageAllocLab2XYZ(i32 %8)
  %10 = call i32 @cmsPipelineInsertStage(i32 %5, i32* %6, i32 %7, i32 %9)
  %11 = call i32 (...) @DbgThread()
  %12 = load i32*, i32** %1, align 8
  %13 = load i32, i32* @cmsAT_END, align 4
  %14 = call i32 (...) @DbgThread()
  %15 = call i32 @_cmsStageAllocXYZ2Lab(i32 %14)
  %16 = call i32 @cmsPipelineInsertStage(i32 %11, i32* %12, i32 %13, i32 %15)
  %17 = load i32*, i32** %1, align 8
  %18 = call i64 @CheckFloatLUT(i32* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %0
  %21 = load i32*, i32** %1, align 8
  %22 = call i64 @CheckStagesLUT(i32* %21, i32 2)
  %23 = icmp ne i64 %22, 0
  br label %24

24:                                               ; preds = %20, %0
  %25 = phi i1 [ false, %0 ], [ %23, %20 ]
  %26 = zext i1 %25 to i32
  store i32 %26, i32* %2, align 4
  %27 = call i32 (...) @DbgThread()
  %28 = load i32*, i32** %1, align 8
  %29 = call i32 @cmsPipelineFree(i32 %27, i32* %28)
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32* @cmsPipelineAlloc(i32, i32, i32) #1

declare dso_local i32 @DbgThread(...) #1

declare dso_local i32 @cmsPipelineInsertStage(i32, i32*, i32, i32) #1

declare dso_local i32 @_cmsStageAllocLab2XYZ(i32) #1

declare dso_local i32 @_cmsStageAllocXYZ2Lab(i32) #1

declare dso_local i64 @CheckFloatLUT(i32*) #1

declare dso_local i64 @CheckStagesLUT(i32*, i32) #1

declare dso_local i32 @cmsPipelineFree(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
